--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "@fastify/cookie": "^11.0.1",
     "dotenv": "^16.4.7",
     "fastify": "^5.0.0",
     "knex": "^3.1.0",
