--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "knex": "node --import tsx ./node_modules/.bin/knex",
+    "build": "tsup src",
     "test": "vitest"
   },
   "keywords": [],
@@ -15,6 +16,7 @@
     "@types/node": "^22.10.2",
     "@types/supertest": "^6.0.2",
     "supertest": "^7.0.0",
+    "tsup": "^8.3.5",
     "tsx": "^4.19.2",
     "typescript": "^5.6.2",
     "vitest": "^2.1.8"
