--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "knex": "node --import tsx ./node_modules/.bin/knex",
@@ -12,6 +15,14 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@fastify/cookie": "^11.0.1",
+    "dotenv": "^16.4.7",
+    "fastify": "^5.0.0",
+    "knex": "^3.1.0",
+    "pg": "^8.13.1",
+    "zod": "^3.24.1"
+  },
   "devDependencies": {
     "@types/node": "^22.10.2",
     "@types/supertest": "^6.0.2",
@@ -19,14 +30,7 @@
     "tsup": "^8.3.5",
     "tsx": "^4.19.2",
     "typescript": "^5.6.2",
-    "vitest": "^2.1.8"
-  },
-  "dependencies": {
-    "@fastify/cookie": "^11.0.1",
-    "dotenv": "^16.4.7",
-    "fastify": "^5.0.0",
-    "knex": "^3.1.0",
-    "sqlite3": "^5.1.7",
-    "zod": "^3.24.1"
+    "vitest": "^2.1.8",
+    "sqlite3": "^5.1.7"
   }
 }
